@@ -1,3 +1,8 @@
+2006-07-31	Benedikt Meurer <benny@xfce.org>
+
+	* thunar-archive-plugin/tap-provider.c(tap_provider_get_file_actions):
+	  Provide actions only for local files.
+
 2006-07-04	Benedikt Meurer <benny@xfce.org>
 
 	* configure.in.in: Post-release version bump.
